--- a/thesite/static/css/main.css
+++ b/thesite/static/css/main.css
@@ -390,17 +390,21 @@ nav ul ul ul li{
   margin-top: 30px;
 }
 .sortby-item-1{
+  margin-right: 20px;
   margin-left: 20px;
 }
 .sortby-wrapper{
-  margin-left: 20px;
+  margin-right: 20px;
 }
 .dropdown-content{
+  padding: 20px;
   background-color: #ccb5aa;
   display: flex;
   flex-direction: column;
 }
 .dropdown-content a{
+  padding-right: 20px;
+  padding-left: 20px;
   color: black;
   font-size: 20px;
   margin: 6px;
@@ -430,9 +434,28 @@ nav ul ul ul li{
     box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2);
 }
 .sbw-item-2{
+  box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2);
   margin-top: 30px;
 
 }
+.sortby-item-1{
+
+  display: inline-block;
+  position: relative;
+}
+.dropdown-content{
+  margin-top: 10px;
+    box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2);
+  display: none;
+  position: absolute;
+  z-index: 999;
+}
+
+.dropdown-content a:hover{color: white;}
+.sortby-item-1:hover .dropdown-content{
+  display: block;
+}
+
 /* styling individual post on home */
 .post-con{
 
@@ -508,9 +531,84 @@ nav ul ul ul li{
   font-size: 20px;
   font-family: 'Barlow Condensed', sans-serif;
 }
+
+/* LOGIN FORM */
+.form-login{
+  padding-top: 40px;
+  padding-bottom: 40px;
+  padding-left: 20px;
+  width: 300px;
+    margin: 0 auto;
+
+}
+.form-login label{
+
+  font-size: 16px;
+  letter-spacing: 3px;
+  font-family: 'Ubuntu', sans-serif;
+}
+.form-login input{
+  box-shadow: 0px 2px 5px 0px rgba(0,0,0,0.14) , 0px 1px 10px 0px rgba(0,0,0,0.12) , 0px 2px 4px -1px rgba(0,0,0,0.2);
+  border-radius: 30px 30px 30px 30px;
+  border: 1px solid gray;
+  font-family: 'Barlow Condensed', sans-serif;
+  margin-bottom: 10px;
+  margin-top: 10px;
+  font-size: 20px;
+  width: 100%;
+  height: 30px;
+  padding: 20px;
+}
+.login-img{
+
+  margin-left: 32%;
+  margin-right: 32%;
+  margin-bottom: 20px;
+  width: 36%;
+  border-radius: 40px 40px 40px 40px;
+}
+
+.button-54 {
+
+  margin-top: 30px;
+  font-family: 'Barlow Condensed', sans-serif;
+  font-size: 18px;
+  letter-spacing: 2px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #000;
+  cursor: pointer;
+  border: 3px solid;
+  padding: 0.25em 0.5em;
+  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
+  position: relative;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  font-weight: bold;
+}
+.small-p{
+  font-weight: bold;
+  text-align: center;
+  font-family: 'Barlow Condensed', sans-serif;
+}
+.button-54:active {
+  box-shadow: 0px 0px 0px 0px;
+  top: 5px;
+  left: 5px;
+}
+
+
+@media (min-width: 768px) {
+  .button-54 {
+    padding: 0.25em 0.75em;
+  }
+}
+
 @media (min-width: 831px) {
   .title-post{
-    font-size: 32px;
+    width: 60%;
+    margin: auto;
   }
   .post-con h1{
     font-size: 20px;
