--- a/thesite/templates/home.html
+++ b/thesite/templates/home.html
@@ -15,27 +15,31 @@
 <h1 class="about-header">Posts</h1>
 <hr class="about-hr">
 <div class="container-sortby">
-  <!-- hiding this for now: drop down for sorting cats
+
   <div class="sortby-item-1">
     <a href="#" class="sort-a">Sort By  <i class="fa-solid fa-caret-down"></i></a>
+    {% if cat_menu %}
     <div class="dropdown-content">
-    <a href="#">Link 1</a>
-    <a href="#">Link 2</a>
-    <a href="#">Link 3</a>
-  </div>
-  </div>
-  -->
-  {% if request.user.is_superuser %}
-  <div class="sortby-wrapper">
-    <div class="sbw-item-1">
-        <a href="{% url 'add_post' %}">Add Post  <i class="fa-solid fa-plus"></i></a>
-    </div>
-    <div class="sbw-item-2">
-        <a href="{% url 'add_category' %}">Add Category  <i class="fa-solid fa-plus"></i></a>
-    </div>
+
+      {% for item in cat_menu %}
+      <a href="{% url 'category' item|slugify %}">{{item }}</a>
+      {% endfor %}
 
   </div>
-  {% endif %}
+  </div>
+{% endif %}
+{% if request.user.is_superuser %}
+<div class="sortby-wrapper">
+  <div class="sbw-item-1">
+      <a href="{% url 'add_post' %}">Add Post  <i class="fa-solid fa-plus"></i></a>
+  </div>
+  <div class="sbw-item-2">
+      <a href="{% url 'add_category' %}">Add Category  <i class="fa-solid fa-plus"></i></a>
+  </div>
+
+</div>
+{% endif %}
+
 </div>
 
 
@@ -46,7 +50,8 @@
 
   <a class="title-post"href="{% url 'article-detail' post.pk %}">{{ post.title }}</a><br/>
   <div class="posts-wrapper">
-  <h1 class="art-h1">Author: {{ post.author.first_name }} {{ post.author.last_name }} -<!-- <a href="{% url 'category' post.category|slugify %}">{{post.category}}</a>-->
+  <h1 class="art-h1">Author: {{ post.author.first_name }} {{ post.author.last_name }} -
+    <a href="{% url 'category' post.category|slugify %}"> {{post.category}}</a> -
     {{ post.post_date }}</h1>
 
     {% if request.user.is_superuser %}
@@ -70,6 +75,7 @@
 </div>
 <br>
 {% endfor %}
+
 
 
 {% endblock %}
