--- a/thesite/templates/update_post.html
+++ b/thesite/templates/update_post.html
@@ -8,7 +8,7 @@ CALV | Edit Post
 {% block content %}
 {% if request.user.is_superuser %}
 <h1 class="about-header">Update: {{ post.title }}</h1>
-<form  class="form-background" method="POST">
+<form  class="form-background" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {{form.media }}
     {{ form.as_p }}
