--- a/thesite/templates/add_category.html
+++ b/thesite/templates/add_category.html
@@ -7,11 +7,12 @@ CALV | Create New Category!
 
 {% block content %}
 {% if request.user.is_superuser %}
+<a class="back-btn" href="{% url 'home' %}"> <i class="fa-solid fa-arrow-left"></i> Back</a>
 <h1 class="about-header">Add Category</h1>
-<form  class="form-background" method="POST">
+<form  class="form-category" method="POST">
     {% csrf_token %}
     {{form.as_p}}
-    <button class="form-button">Add Category</button>
+    <button class="button-54">Add Category</button>
 </form>
 
 {% else %}
